--- a/stockcollection/src/main/resources/templates/ema.html
+++ b/stockcollection/src/main/resources/templates/ema.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>详细页面</title>
+    <title>EMA12和EMA26图表</title>
     <script src="/js/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css" type="text/css"/>
 </head>
 <body>
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-<div>EMA12和EMA26图表</div>
-
-<div style="width: 90px;float: left;margin-left: 5%">
-    <input style="" id="stockId" name="stockId" placeholder="请输入要查询的股票编码: 如000001" >
-    <button onclick="init()">确定</button>
+<div style="width: 96%;margin-left:2%;float: left;height: 50px;margin-top: 10px;">
+    <input class="searchInputDiv" id="stockId" name="stockId" placeholder="请输入要查询的股票编码: 如000001">
+    <div class="searchInputButton" id="searchInputButton" onclick="init()">确定</div>
 </div>
 
-<div id="main" style="height:500px"></div>
-<div id="main2" style="height:500px"></div>
+<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+<div class="flowDiv">
+    <div id="main" style="height:800px;width: 2000px;"></div>
+</div>
+x
+<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+<div class="flowDiv">
+    <div id="main2" style="height:800px;width: 2000px;"></div>
+</div>
+x
 <!-- ECharts单文件引入 -->
 <script src="http://echarts.baidu.com/build/dist/echarts-all.js"></script>
 <script type="text/javascript">
@@ -141,13 +148,11 @@
                         {
                             name:'ema12',
                             type:'line',
-                            stack: '总量',
                             data:eMA12
                         },
                         {
                             name:'ema26',
                             type:'line',
-                            stack: '总量',
                             data:eMA26
                         }
 
@@ -193,7 +198,6 @@
                     series : [{
                         name:'收盘价',
                         type:'line',
-                        stack: '总量',
                         data:spj
                     }
                     ]
@@ -211,6 +215,13 @@
 
     }
 
+
+    $('#stockId').bind('keyup', function(event) {
+        if (event.keyCode == "13") {
+            //回车执行查询
+            $('#searchInputButton').click();
+        }
+    });
 
 
 
