--- a/stockcollection/src/main/resources/templates/index.html
+++ b/stockcollection/src/main/resources/templates/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>我的第一桶金</title>
-    <script src="/js/jquery-3.3.1.min.js"></script>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <title>新的起点</title>
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
 </head>
+
 <body>
 
+<div class="main" id="div2">
 
-<a href="/toEma"><div style="width: 200px ;height: 50px ;"> ema12/26 页面</div></a>
 
-<a href="/toMacd"><div style="width: 200px ;height: 50px ;"> macd 页面</div></a>
+    <div class="indexButtom">
+        每日推荐
+    </div>
 
-<a href="ema.html"><div style="width: 200px ;height: 50px ;"> macd 页面</div></a>
+    <div class="indexButtom">
+        历史推荐
+    </div>
 
+    <a href="/toEma">
+    <div class="indexButtom">
+        最新股价
+    </div>
+    </a>
+
+    <a href="/toMacd">
+    <div class="indexButtom">
+        MACD
+    </div>
+    </a>
+
+    <div class="indexButtom">
+        每日心得
+    </div>
+
+    <div class="indexButtom">
+        我的故事
+    </div>
+
+
+
+</div>
 </body>
+</html>
