新增比对想法

--- a/stockcollection/src/main/resources/templates/index.html
+++ b/stockcollection/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>新的起点</title>
+    <title>为了我的辛运女神 For MY Luck Fairy</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
 </head>
 
@@ -11,13 +11,11 @@
 
 <div class="main" id="div2">
 
-    For MY Luck Fairy
-
-
+    <a href="/toNominate">
     <div class="indexButtom">
         每日推荐
     </div>
-
+    </a>
     <div class="indexButtom">
         历史推荐
     </div>
