--- a/stockcollection/src/main/resources/templates/nominate.html
+++ b/stockcollection/src/main/resources/templates/nominate.html
@@ -9,11 +9,79 @@
 <div id="main" style="height:400px;border: 1px solid #444;width: 100%;">
 
 
-    <input type="text" placeholder="收盘价最小值">
-    <input type="text" placeholder="收盘价最大值">
+    <input type="text" id="spjmin" value="20" placeholder="收盘价最小值">
+    <input type="text" id="spjmax"  value="200" placeholder="收盘价最大值">
 
-    <input type="text" placeholder="平均涨幅">
-    <input type="text" placeholder="换手率">
+    <input type="text" id="zdf" placeholder="平均涨幅">
+    <input type="text" id="hsl" placeholder="换手率">
+
+    <input type="button"  value="获取对应数据" onclick="getNominate()">
+
+
+    <div style="width: 100%;height: 300px;margin-top: 50px;">
+
+       <table border="1px">
+           <tr>
+               <td>stockCode</td>
+               <td>spj</td>
+               <td>上一天涨幅</td>
+               <td>上两天涨幅</td>
+               <td>上三天涨幅</td>
+               <td>上五天平均涨幅</td>
+               <td>十天平均涨幅</td>
+               <td>十五天平均涨幅</td>
+               <td>三十天平均涨幅</td>
+           </tr>
+           <tbody id="tbody">
+
+           </tbody>
+       </table>
+
+    </div>
+
+
+    <script>
+
+
+        function  getNominate() {
+            var str = {"spjmin": $("#spjmin").val(), "spjmax": $("#spjmax").val()}
+
+            $.ajax({
+                type: "post",
+                async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                url: "/getNomainate",    //请求发送到TestServlet处
+                data: JSON.stringify(str),
+                dataType: "text",        //返回数据形式为json
+                contentType: "application/json",
+                success: function (result) {
+                    console.log("ssssssss")
+
+                    console.log(result)
+
+                    //     [{"bAR":1.7848293026861057,"cjje":55173,"cjl":50686,"dIF":11.427862970706045,"dValue":0,"eMA12":92.73001285724803,"eMA26":81.30214988654198,"eMAMACD":10.535448319362992,"hsl":8.74,"jValue":0,"kValue":0,"kpj":103.41,"spj":111.1,"stockCode":"603383","stockDate":"2019-04-03 00:00:00.0","zde":10.1,"zdf":10,"zdj":103.41,"zf":7.61,"zgj":111.1}]
+                    // <tr>
+                    // <td>stockCode</td>
+                    // <td>spj</td>
+                    // <td>上一天涨幅</td>
+                    // <td>上两天涨幅</td>
+                    // <td>上三天涨幅</td>
+                    // <td>上五天平均涨幅</td>
+                    // <td>十天平均涨幅</td>
+                    // <td>十五天平均涨幅</td>
+                    // <td>三十天平均涨幅</td>
+                    // </tr>
+
+                },
+                error: function (errorMsg) {
+                    //请求失败时执行该函数
+                    alert("图表请求数据失败!");
+                }
+            })
+
+        }
+
+
+    </script>
 
 
 </div>
