新增数据采集项

--- a/stockcollection/src/main/resources/templates/index.html
+++ b/stockcollection/src/main/resources/templates/index.html
@@ -20,6 +20,13 @@
         历史推荐
     </div>
 
+    <a href="/toNewStock">
+        <div class="indexButtom">
+            新股上市
+        </div>
+    </a>
+
+
     <a href="/toEma">
     <div class="indexButtom">
         最新股价
