--- a/stockcollection/src/main/resources/templates/nominate.html
+++ b/stockcollection/src/main/resources/templates/nominate.html
@@ -43,6 +43,11 @@
     <script>
 
 
+        window.onload=init();
+
+        function init() {
+            getNominate();
+        }
         function  getNominate() {
             var str = {"spjmin": $("#spjmin").val(), "spjmax": $("#spjmax").val()}
 
@@ -54,22 +59,31 @@
                 dataType: "text",        //返回数据形式为json
                 contentType: "application/json",
                 success: function (result) {
-                    console.log("ssssssss")
 
+                   // "{\"zdf_1\":10.0,\"zdf_2\":-0.28,\"zdf_3\":10.0,\"zdf_5\":5.119999999999999,\"zdf_10\":2.485,\"zdf_15\":2.5660000000000003,\"zdf_30\":3.6983333333333333}"
+
+
+                    var jsonObj = JSON.parse(result);//转换为json对象
                     console.log(result)
+                    console.log(jsonObj.length)
+                    console.log(jsonObj.zdf_2)
 
-                    //     [{"bAR":1.7848293026861057,"cjje":55173,"cjl":50686,"dIF":11.427862970706045,"dValue":0,"eMA12":92.73001285724803,"eMA26":81.30214988654198,"eMAMACD":10.535448319362992,"hsl":8.74,"jValue":0,"kValue":0,"kpj":103.41,"spj":111.1,"stockCode":"603383","stockDate":"2019-04-03 00:00:00.0","zde":10.1,"zdf":10,"zdj":103.41,"zf":7.61,"zgj":111.1}]
-                    // <tr>
-                    // <td>stockCode</td>
-                    // <td>spj</td>
-                    // <td>上一天涨幅</td>
-                    // <td>上两天涨幅</td>
-                    // <td>上三天涨幅</td>
-                    // <td>上五天平均涨幅</td>
-                    // <td>十天平均涨幅</td>
-                    // <td>十五天平均涨幅</td>
-                    // <td>三十天平均涨幅</td>
-                    // </tr>
+                    var temphtml="";
+
+                    temphtml+="<tr>";
+                    temphtml+="<td>stockCode</td>";
+                    temphtml+="<td>spj</td>";
+                    temphtml+="<td>"+jsonObj.zdf_1.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_2.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_3.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_5.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_10.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_15.toFixed(4)+"</td>";
+                    temphtml+="<td>"+jsonObj.zdf_30.toFixed(4)+"</td>";
+                    temphtml+="</tr>";
+
+                    $("#tbody").html(temphtml)
+
 
                 },
                 error: function (errorMsg) {
