--- a/stockcollection/src/main/resources/templates/index.html
+++ b/stockcollection/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 
 <div class="main" id="div2">
 
-    <a href="/toNominate">
+    <a href="/toNominateList">
     <div class="indexButtom">
         每日推荐
     </div>
