--- a/stockcollection/src/main/resources/templates/nominate/stock_nominate_index.html
+++ b/stockcollection/src/main/resources/templates/nominate/stock_nominate_index.html
@@ -13,19 +13,19 @@
 
 <div class="main" id="div2">
 
-    <a href="/toNominate">
+    <a href="/toNominateInfo">
         <div class="indexButtom">
             涨幅排行榜
         </div>
     </a>
 
-    <a href="/toNominateCross?searchType=goldCross">
+    <a href="/toNominateCross?crossType=GOLD_CROSS">
         <div class="indexButtom">
             0 上 金叉
         </div>
     </a>
 
-    <a href="/toNominateCross?searchType=deadCross">
+    <a href="/toNominateCross?crossType=DEAD_CROSS">
         <div class="indexButtom">
             0 下死叉
         </div>
