--- a/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
+++ b/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
@@ -54,7 +54,7 @@
             $.ajax({
                 type: "post",
                 async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-                url: "/getNomainate",    //请求发送到TestServlet处
+                url: "/getNominateInfo",    //请求发送到TestServlet处
                 data: JSON.stringify(str),
                 dataType: "text",        //返回数据形式为json
                 contentType: "application/json",
