--- a/stockcollection/src/main/resources/templates/nominate/stock_nominate_price.html
+++ b/stockcollection/src/main/resources/templates/nominate/stock_nominate_price.html
@@ -25,16 +25,16 @@
             <input type="text" id="spjmin" placeholder="收盘最低价" value="30">
             <input type="text" id="spjmax" placeholder="收盘最高价" value="33">
             <br>
-            <input type="text" id="" placeholder="昨天涨幅" value="">
-            <input type="text" id="" placeholder="前天涨幅" value="">
-            <input type="text" id="" placeholder="前三天涨幅" value="">
+            <input type="text"  placeholder="昨天涨幅" value="">
+            <input type="text"  placeholder="前天涨幅" value="">
+            <input type="text"  placeholder="前三天涨幅" value="">
             <br>
-            <input type="text" id="" placeholder="前五天平均涨幅" value="">
-            <input type="text" id="" placeholder="前十天平均涨幅" value="">
+            <input type="text"  placeholder="前五天平均涨幅" value="">
+            <input type="text"  placeholder="前十天平均涨幅" value="">
             <br>
-            <input type="text" id="" placeholder="前十五天平均涨幅" value="">
-            <input type="text" id="" placeholder="前三十天平均涨幅" value=""> <input type="button" value="查询"
-                                                                             onclick="search()">
+            <input type="text"  placeholder="前十五天平均涨幅" value="">
+            <input type="text"  placeholder="前三十天平均涨幅" value="">
+            <input type="button" value="查询"  onclick="search()">
 
         </div>
     </div>
