--- a/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
+++ b/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
@@ -1,102 +1,232 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="utf-8">
-    <title>个股推荐</title>
-    <script src="/js/jquery-3.3.1.min.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../web/css/templatemo-style.css">
+    <title>涨跌幅排行</title>
+    <script src="../../static/js/common.js"></script>
 </head>
+
 <body>
-<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-<div id="main" style="height:400px;border: 1px solid #444;width: 100%;">
-
-
-    <input type="text" id="spjmin" value="20" placeholder="收盘价最小值">
-    <input type="text" id="spjmax"  value="200" placeholder="收盘价最大值">
-
-    <input type="text" id="zdf" placeholder="平均涨幅">
-    <input type="text" id="hsl" placeholder="换手率">
-
-    <input type="button"  value="获取对应数据" onclick="getNominate()">
-
-
-    <div style="width: 100%;height: 300px;margin-top: 50px;">
-
-       <table border="1px">
-           <tr>
-               <td>stockCode</td>
-               <td>spj</td>
-               <td>上一天涨幅</td>
-               <td>上两天涨幅</td>
-               <td>上三天涨幅</td>
-               <td>上五天平均涨幅</td>
-               <td>十天平均涨幅</td>
-               <td>十五天平均涨幅</td>
-               <td>三十天平均涨幅</td>
-           </tr>
-           <tbody id="tbody">
-
-           </tbody>
-       </table>
-
+<div class="fixed-header">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" onclick="javascript:history.go(-1);"><</a>
+        </div>
     </div>
+</div>
 
 
-    <script>
+<div class="container">
+    <section class="col-md-12 content" id="home">
+        <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
+            <img src="../web/image/4.jpg" alt="Image" class="tm-image">
+        </div>
+        <div class="col-lg-6 col-md-6 col-md-pull-6 content-item background flexbox">
+            <h2 class="section-title">搜索</h2>
+            <p class="margin-b-25">找到你的关注点，我将给你帮助.</p>
+
+            <!--<div class="row"> -->
+            <form method="post" name="contact-form" class="contact-form">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="form-group">
+                        <input name="spjmin" type="text" class="form-control" id="spjmin" placeholder="最低收盘价..."
+                               required>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
+                    <div class="form-group contact-field">
+                        <input name="spjmax" type="email" class="form-control" id="spjmax" placeholder="最高收盘价..." required>
+                    </div>
+                </div>
+                <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+                <!--<div class="form-group contact-field">-->
+                <!--<input name="subject" type="text" class="form-control" id="subject" placeholder="Your Subject..." required>-->
+                <!--</div>-->
+                <!--</div>-->
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="form-group margin-b-0">
+                        <button type="button" id="form-submit" class="btn no-bg btn-contact" onclick="getNominate()">查询</button>
+                    </div>
+                </div>
+            </form>
+            <!--</div> -->
+            <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
+        </div>
+    </section>
+
+    <section class="col-md-12 content" id="">
+        <div style="width: 100%;min-height: 800px;background-color: #fff">
+
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>stockCode</th>
+                    <th>spj</th>
+                    <th>上一天涨幅</th>
+                    <th>上两天涨幅</th>
+                    <th>上三天涨幅</th>
+                    <th>上五天平均涨幅</th>
+                    <th>十天平均涨幅</th>
+                    <th>十五天平均涨幅</th>
+                    <th>三十天平均涨幅</th>
+                    <th>详情</th>
+                </tr>
+                </thead>
+                <tbody id="tbody">
+
+                </tbody>
+            </table>
 
 
-        window.onload=init();
-
-        function init() {
-            getNominate();
-        }
-        function  getNominate() {
-            var str = {"spjmin": $("#spjmin").val(), "spjmax": $("#spjmax").val()}
-
-            $.ajax({
-                type: "post",
-                async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-                url: "/getNominateInfo",    //请求发送到TestServlet处
-                data: JSON.stringify(str),
-                dataType: "text",        //返回数据形式为json
-                contentType: "application/json",
-                success: function (result) {
-
-                   // "{\"zdf_1\":10.0,\"zdf_2\":-0.28,\"zdf_3\":10.0,\"zdf_5\":5.119999999999999,\"zdf_10\":2.485,\"zdf_15\":2.5660000000000003,\"zdf_30\":3.6983333333333333}"
-
-
-                    var jsonObj = JSON.parse(result);//转换为json对象
-                    console.log(result)
-                    console.log(jsonObj.length)
-                    console.log(jsonObj.zdf_2)
-
-                    var temphtml="";
-
-                    temphtml+="<tr>";
-                    temphtml+="<td>stockCode</td>";
-                    temphtml+="<td>spj</td>";
-                    temphtml+="<td>"+jsonObj.zdf_1.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_2.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_3.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_5.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_10.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_15.toFixed(4)+"</td>";
-                    temphtml+="<td>"+jsonObj.zdf_30.toFixed(4)+"</td>";
-                    temphtml+="</tr>";
-
-                    $("#tbody").html(temphtml)
-
-
-                },
-                error: function (errorMsg) {
-                    //请求失败时执行该函数
-                    alert("图表请求数据失败!");
-                }
-            })
-
-        }
-
-
-    </script>
-
+        </div>
+    </section>
 
 </div>
+
+<div class="text-center footer">
+    <div class="container">Copyright &copy; 2018.Company name All rights reserved.<a target="_blank"
+                                                                                     href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
+    </div>
+</div>
+
+<script src="../web/js/jquery.min.js"></script>
+<script src="../web/js/bootstrap.min.js"></script>
+<script src="../web/js/jquery.singlePageNav.min.js"></script>
+
+<script>
+
+
+
+
+    function init() {
+        getNominate();
+    }
+
+    function getNominate() {
+
+        var spjminVal = $("#spjmin").val();
+        var spjmaxVal = $("#spjmax").val();
+
+        if (spjminVal==""||spjminVal==null) {
+            spjminVal=20;
+            $("#spjmin").val(spjminVal);
+        }
+        if (spjmaxVal==""||spjmaxVal==null) {
+            spjmaxVal=spjminVal+20;
+            $("#spjmax").val(spjmaxVal);
+        }
+
+        var parJson = JSON.parse("{\"spjmin\": "+spjminVal+", \"spjmax\": "+spjmaxVal+"}");
+
+        var str = {"spjmin": spjminVal, "spjmax": spjmaxVal}
+
+
+        $.ajax({
+            type: "post",
+            async: true,
+            url: "/stock/getNominateInfo",
+            data: JSON.stringify(parJson),
+            dataType: "text",        //返回数据形式为json
+            contentType: "application/json",
+            success: function (result) {
+
+                // "{\"zdf_1\":10.0,\"zdf_2\":-0.28,\"zdf_3\":10.0,\"zdf_5\":5.119999999999999,\"zdf_10\":2.485,\"zdf_15\":2.5660000000000003,\"zdf_30\":3.6983333333333333}"
+
+
+                var jsonObj = JSON.parse(result);//转换为json对象
+
+                var temphtml = "";
+                for (var i = 0; i < jsonObj.length; i++) {
+                    temphtml += "<tr>";
+                    temphtml += "<td>" + jsonObj[i].stockCode + "</td>";
+                    temphtml += "<td>" + jsonObj[i].spj + "</td>";
+
+                    temphtml += "<td>" + jsonObj[i].zdf_1.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_2.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_3.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_5.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_10.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_15.toFixed(2) + "</td>";
+                    temphtml += "<td>" + jsonObj[i].zdf_30.toFixed(2) + "</td>";
+                    temphtml += "<td><a href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>查看具体信息</a></td>";
+                    temphtml += "</tr>";
+                }
+
+                $("#tbody").html(temphtml)
+            },
+            error: function (errorMsg) {
+                //请求失败时执行该函数
+                alert("图表请求数据失败!");
+            }
+        })
+
+    }
+
+
+    function toIndex0() {
+        window.location.href = "/stock/toNominateInfo"
+    }
+
+    function toIndex1() {
+        window.location.href = "/stock/toNominateIndex"
+    }
+
+    function toIndex2() {
+        window.location.href = "/stock/toHistory"
+    }
+
+    function toIndex3() {
+        window.location.href = "/stock/toNewStock"
+    }
+
+    function toIndex4() {
+        window.location.href = "/stock/toEma"
+    }
+
+    function toIndex5() {
+        window.location.href = "/stock/toMacd"
+    }
+
+
+    // Check scroll position and add/remove background to navbar
+    function checkScrollPosition() {
+        if ($(window).scrollTop() > 50) {
+            $(".fixed-header").addClass("scroll");
+        } else {
+            $(".fixed-header").removeClass("scroll");
+        }
+    }
+
+    $(document).ready(function () {
+// Single page nav
+        $('.fixed-header').singlePageNav({
+            offset: 59,
+            filter: ':not(.external)',
+            updateHash: true
+        });
+
+        checkScrollPosition();
+
+// nav bar
+        $('.navbar-toggle').click(function () {
+            $('.main-menu').toggleClass('show');
+        });
+
+        $('.main-menu a').click(function () {
+            $('.main-menu').removeClass('show');
+        });
+    });
+
+    $(window).on("scroll", function () {
+        checkScrollPosition();
+    });
+
+
+</script>
 </body>
+</html>
