--- a/stockcollection/src/main/resources/templates/stock/stock_macd.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_macd.html
@@ -8,7 +8,17 @@
 <body>
 
 <div style="width: 96%;margin-left:2%;float: left;height: 50px;margin-top: 10px;">
-    <input class="searchInputDiv" id="stockId" name="stockId" placeholder="请输入要查询的股票编码: 如000001">
+    <input class="searchInputDiv" id="stockCode" name="stockCode" placeholder="请输入要查询的股票编码: 如000001">
+
+    <select id="limitNum" class="searchInputDiv" onchange="init()">
+        <option value="100" selected="selected">100</option>
+        <option value="200">200</option>
+        <option value="300">300</option>
+        <option value="500">500</option>
+        <option value="1000">1000</option>
+        <option value="2000">2000</option>
+        <option value="999999">All</option>
+    </select>
     <div class="searchInputButton" id="searchInputButton" onclick="init()">确定</div>
 </div>
 
@@ -20,17 +30,22 @@ x
 
 <!-- ECharts单文件引入 -->
 <script src="http://echarts.baidu.com/build/dist/echarts-all.js"></script>
+<script src="../js/common.js"></script>
 <script type="text/javascript">
     window.onload = init();
 
     function init() {
-        var stockID = $("#stockId").val();
-        console.log(stockID)
-        if (stockID == "" || stockID == undefined)
-            stockID = "000001"
+
+        $("#stockCode").val(getUrlParam("stockCode"));
+
+        var stockCode = $("#stockCode").val();
+
+        if (stockCode == "" || stockCode == undefined)
+            stockCode = "000001"
 
 
-        var str = {"stockCode": stockID, "stockBeginTime": "", "stockEndTime": ""}
+        var limitnum =$("#limitNum").val();
+        var str = {"stockCode": stockCode,"limitNum":limitnum, "stockBeginTime": "", "stockEndTime": ""}
         // 基于准备好的dom，初始化echarts图表
         var myChart = echarts.init(document.getElementById('main'));
 
@@ -152,7 +167,7 @@ x
     }
 
 
-    $('#stockId').bind('keyup', function(event) {
+    $('#stockCode').bind('keyup', function(event) {
         if (event.keyCode == "13") {
             //回车执行查询
             $('#searchInputButton').click();
