--- a/stockcollection/src/main/resources/templates/web/diary_list.html
+++ b/stockcollection/src/main/resources/templates/web/diary_list.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
+    <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../web/css/templatemo-style.css">
     <title>Home</title>
 </head>
 
@@ -22,7 +22,7 @@
 <div class="container" id="innerDiv">
     <section class="col-md-12 content" id="home">
         <div class="col-lg-6 col-md-6 content-item">
-            <img src="image/1.jpg" alt="Image" class="tm-image">
+            <img src="../web/image/1.jpg" alt="Image" class="tm-image">
         </div>
         <div class="col-lg-6 col-md-6 content-item content-item-1 background">
             <h2 class="main-title text-center dark-blue-text">2019-04-13</h2>
@@ -40,7 +40,7 @@
     </section>
     <section class="col-md-12 content padding">
         <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
-            <img src="image/2.jpg" alt="Image" class="tm-image">
+            <img src="../web/image/2.jpg" alt="Image" class="tm-image">
         </div>
         <div class="col-lg-6 col-md-6 col-md-pull-6 content-item background flexbox">
             <h2 class="main-title text-center dark-blue-text">2019-04-13</h2>
@@ -75,9 +75,9 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.singlePageNav.min.js"></script>
+<script src="../web/js/jquery.min.js"></script>
+<script src="../web/js/bootstrap.min.js"></script>
+<script src="../web/js/jquery.singlePageNav.min.js"></script>
 
 <script>
 
@@ -135,7 +135,7 @@
                     innerhtml += "<h2 class=\"main-title text-center dark-blue-text\">" + rempcreatedate + "</h2>";
                     innerhtml += remptext;
                     innerhtml += "<p style=\"color: #00adff;\"><br>"+jsonObj[i].address+"</p>";
-                    innerhtml += " <a href=\"/test/toDiaryInfo?id="+jsonObj[i].id+"\"><button type=\"button\" class=\"btn btn-big dark-blue-bordered-btn\">More</button></a>";
+                    innerhtml += " <a href=\"/web/toDiaryInfo?id="+jsonObj[i].id+"\"><button type=\"button\" class=\"btn btn-big dark-blue-bordered-btn\">More</button></a>";
                     innerhtml += "</div>";
                     innerhtml += "</section>";
                 }
@@ -145,8 +145,7 @@
             },
             error: function (errorMsg) {
                 //请求失败时执行该函数
-                alert("图表请求数据失败!");
-                myChart.hideLoading();
+                console.log("获取信息失败!");
             }
         })
     }
