--- a/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
+++ b/stockcollection/src/main/resources/templates/nominate/stock_nominate_info.html
@@ -67,13 +67,13 @@
                 <tr>
                     <th>stockCode</th>
                     <th>spj</th>
-                    <th>上一天涨幅</th>
-                    <th>上两天涨幅</th>
-                    <th>上三天涨幅</th>
-                    <th>上五天平均涨幅</th>
-                    <th>十天平均涨幅</th>
-                    <th>十五天平均涨幅</th>
-                    <th>三十天平均涨幅</th>
+                    <th>昨天</th>
+                    <th>前天</th>
+                    <th>大前天</th>
+                    <th>平均-5</th>
+                    <th>平均-10</th>
+                    <th>平均-15</th>
+                    <th>平均-30</th>
                     <th>详情</th>
                 </tr>
                 </thead>
@@ -100,7 +100,7 @@
 
 <script>
 
-
+    window.onload=init;
 
 
     function init() {
@@ -153,7 +153,7 @@
                     temphtml += "<td>" + jsonObj[i].zdf_10.toFixed(2) + "</td>";
                     temphtml += "<td>" + jsonObj[i].zdf_15.toFixed(2) + "</td>";
                     temphtml += "<td>" + jsonObj[i].zdf_30.toFixed(2) + "</td>";
-                    temphtml += "<td><a href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>查看具体信息</a></td>";
+                    temphtml += "<td><a target='_blank' href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>查看具体信息</a></td>";
                     temphtml += "</tr>";
                 }
 
