大版本更新 ，可以快要可以赚钱了呀

--- a/stockcollection/src/main/resources/templates/stock/index.html
+++ b/stockcollection/src/main/resources/templates/stock/index.html
@@ -74,31 +74,6 @@
             </div>
         </div>
     </footer>
-    <footer class="col-md-12 content" >
-        <div class="col-lg-6 col-md-6 last">
-            <img src="../web/image/5.jpg" alt="Image" class="tm-image">
-        </div>
-        <div class="col-lg-6 col-md-6 background last ">
-            <h2 class="section-title">最新股价</h2>
-            <p class="about-text">把握最新股价，从合适的地方入手</p>
-            <div>
-                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex4()">最适合</button>
-            </div>
-        </div>
-    </footer>
-    <footer class="col-md-12 content" >
-        <div class="col-lg-6 col-md-6 last">
-            <img src="../web/image/5.jpg" alt="Image" class="tm-image">
-        </div>
-        <div class="col-lg-6 col-md-6 background last ">
-            <h2 class="section-title">MACD</h2>
-            <p class="about-text">MACD 永远的前者</p>
-            <div>
-                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex5()">希望的趋势</button>
-            </div>
-        </div>
-    </footer>
-
 
 
 </div>
@@ -117,10 +92,10 @@
 
 
     function toIndex0() {
-        window.location.href = "/stock/toNominateInfo"
+        window.location.href = "/stock/toStockIncrease"
     }
     function toIndex1() {
-        window.location.href = "/stock/toNominateIndex"
+        window.location.href = "/stock/toStockCross?crossType=GOLD_CROSS"
     }
 
     function toIndex2() {
@@ -131,13 +106,7 @@
         window.location.href = "/stock/toNewStock"
     }
 
-    function toIndex4() {
-        window.location.href = "/stock/toEma"
-    }
 
-    function toIndex5() {
-        window.location.href = "/stock/toMacd"
-    }
 
 
 
