--- a/stockcollection/src/main/resources/templates/stock/stock_cross_effect.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_cross_effect.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../web/css/templatemo-style.css">
-    <title>金叉-死叉推荐</title>
+    <title>昨日涨幅对今日的影响</title>
     <script src="../../js/common.js"></script>
 </head>
 
@@ -20,57 +20,8 @@
 </div>
 
 
-<div class="container">
-    <section class="col-md-12 content" id="home">
-        <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
-            <img src="../web/image/4.jpg" alt="Image" class="tm-image">
-        </div>
-        <div class="col-lg-6 col-md-6 col-md-pull-6 content-item background flexbox">
-            <h2 class="section-title">搜索</h2>
-            <p class="margin-b-25">找到你的关注点，我将给你帮助.</p>
+<div class="container"  id="home">
 
-            <!--<div class="row"> -->
-            <form method="post" name="contact-form" class="contact-form">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="form-group">
-                        <input name="spjmin" type="text" class="form-control" id="spjmin" placeholder="最低收盘价..."
-                               required>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="spjmax" type="email" class="form-control" id="spjmax" placeholder="最高收盘价..." required>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="spjmax" type="email" class="form-control" id="dayNum" placeholder="限定日期..." required value="10">
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <select  class="form-control" id="crossType">
-                        <option value="GOLD_CROSS" selected="selected">金叉</option>
-                        <option value="DEAD_CROSS">死叉</option>
-                    </select>
-
-                </div>
-                <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-                <!--<div class="form-group contact-field">-->
-                <!--<input name="subject" type="text" class="form-control" id="subject" placeholder="Your Subject..." required>-->
-                <!--</div>-->
-                <!--</div>-->
-
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="form-group margin-b-0">
-                        <button type="button" id="form-submit" class="btn no-bg btn-contact" onclick="getNominate()">查询</button>
-                    </div>
-                </div>
-            </form>
-            <!--</div> -->
-            <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
-        </div>
-    </section>
 
     <section class="col-md-12 content" id="">
         <div style="width: 100%;min-height: 800px;background-color: #fff">
@@ -78,13 +29,12 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>stockCode</th>
-                    <th>spj</th>
-                    <th>时间</th>
-                    <th>综合</th>
-                    <th>MACD</th>
-                    <th>价格</th>
-                    <th>影响</th>
+                    <th>stockCodesz</th>
+                    <th>本/全-1</th>
+                    <th>本/全-2</th>
+                    <th>本/全-3</th>
+                    <th>本/全-4</th>
+                    <th>本/全-5</th>
                 </tr>
                 </thead>
                 <tbody id="tbody">
@@ -121,20 +71,25 @@
         $.ajax({
             type: "post",
             async: true,
-            url: "/stock/getCrossEffect",
+            url: "/stock/getStockCrossEffect",
             data: JSON.stringify(str),
             dataType: "text",        //返回数据形式为json
             contentType: "application/json",
             success: function (result) {
-
+                console.log(result)
 
                 var jsonObj = JSON.parse(result);//转换为json对象
-
                 var temphtml = "";
-                for (var i = 0; i < jsonObj.length; i++) {
+                var zdf=  jsonObj.zdf;
 
-
-                }
+                temphtml += "<tr>";
+                temphtml += "<td></td>";
+                temphtml += "<td>" + jsonObj.Cross.increase1 + "/"+jsonObj.CrossAll.increase1+"</td>";
+                temphtml += "<td>" + jsonObj.Cross.increase2 + "/"+jsonObj.CrossAll.increase2+"</td>";
+                temphtml += "<td>" + jsonObj.Cross.increase3 + "/"+jsonObj.CrossAll.increase3+"</td>";
+                temphtml += "<td>" + jsonObj.Cross.increase4 + "/"+jsonObj.CrossAll.increase4+"</td>";
+                temphtml += "<td>" + jsonObj.Cross.increase5 + "/"+jsonObj.CrossAll.increase5+"</td>";
+                temphtml += "<tr>";
 
                 $("#tbody").html(temphtml)
             },
