--- a/stockcollection/src/main/resources/templates/stock/stock_increase_effect.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_increase_effect.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../web/css/templatemo-style.css">
-    <title>金叉-死叉推荐</title>
+    <title>昨日涨幅对今日的影响</title>
     <script src="../../js/common.js"></script>
 </head>
 
@@ -20,50 +20,28 @@
 </div>
 
 
-<div class="container">
+<div class="container" >
     <section class="col-md-12 content" id="home">
         <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
             <img src="../web/image/4.jpg" alt="Image" class="tm-image">
         </div>
         <div class="col-lg-6 col-md-6 col-md-pull-6 content-item background flexbox">
             <h2 class="section-title">搜索</h2>
-            <p class="margin-b-25">找到你的关注点，我将给你帮助.</p>
+            <p class="margin-b-25">查询个股涨幅的影响.</p>
 
             <!--<div class="row"> -->
             <form method="post" name="contact-form" class="contact-form">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="form-group">
-                        <input name="spjmin" type="text" class="form-control" id="spjmin" placeholder="最低收盘价..."
+                        <input name="spjmin" type="text" class="form-control" id="stockCode" placeholder="股票编号..."
                                required>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="spjmax" type="email" class="form-control" id="spjmax" placeholder="最高收盘价..." required>
-                    </div>
-                </div>
 
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <div class="form-group contact-field">
-                        <input name="spjmax" type="email" class="form-control" id="dayNum" placeholder="限定日期..." required value="10">
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
-                    <select  class="form-control" id="crossType">
-                        <option value="GOLD_CROSS" selected="selected">金叉</option>
-                        <option value="DEAD_CROSS">死叉</option>
-                    </select>
-
-                </div>
-                <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-                <!--<div class="form-group contact-field">-->
-                <!--<input name="subject" type="text" class="form-control" id="subject" placeholder="Your Subject..." required>-->
-                <!--</div>-->
-                <!--</div>-->
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="form-group margin-b-0">
-                        <button type="button" id="form-submit" class="btn no-bg btn-contact" onclick="getNominate()">查询</button>
+                        <button type="button" id="form-submit" class="btn no-bg btn-contact" onclick="search()">查询</button>
                     </div>
                 </div>
             </form>
@@ -78,13 +56,10 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>stockCode</th>
-                    <th>spj</th>
-                    <th>时间</th>
-                    <th>综合</th>
-                    <th>MACD</th>
-                    <th>价格</th>
-                    <th>影响</th>
+                    <th>涨幅区间</th>
+                    <th>本股票涨幅</th>
+                    <th>全盘股票涨幅</th>
+                    <th>昨日涨幅</th>
                 </tr>
                 </thead>
                 <tbody id="tbody">
@@ -114,27 +89,111 @@
 
     function getNominate() {
 
-        getUrlParam("stockCode")
+        $("#stockCode").val( getUrlParam("stockCode"))
 
         var str = {"stockCode": getUrlParam("stockCode")}
 
         $.ajax({
             type: "post",
             async: true,
-            url: "/stock/getIncreaseEffect",
+            url: "/stockIncrease/getStockIncreaseEffect",
             data: JSON.stringify(str),
             dataType: "text",        //返回数据形式为json
             contentType: "application/json",
             success: function (result) {
 
-
                 var jsonObj = JSON.parse(result);//转换为json对象
-
                 var temphtml = "";
-                for (var i = 0; i < jsonObj.length; i++) {
+                var zdf=  jsonObj.zdf;
+
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 10+</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase10 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase10 + "</td>";
+                if (zdf>10)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 8-10</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase810 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase810 + "</td>";
+                if (zdf>=8 &&zdf <10)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 6-8</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase68 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase68 + "</td>";
+                if (zdf>=6 &&zdf <8)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 4-6</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase46 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase46 + "</td>";
+                if (zdf>=4 &&zdf <6)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 2-4</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase24 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase24 + "</td>";
+                if (zdf>=2 &&zdf <4)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>上涨 0-2</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.increase02 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.increase02 + "</td>";
+                if (zdf>=0 &&zdf <2)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
 
 
-                }
+
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 0-2</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend02 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend02 + "</td>";
+                if (zdf>=-2 &&zdf <0)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 2-4</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend24 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend24 + "</td>";
+                if (zdf>=-4 &&zdf <-2)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 4-6</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend46 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend46 + "</td>";
+                if (zdf>=-6 &&zdf <-4)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 6-8</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend68 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend68 + "</td>";
+                if (zdf>=-8 &&zdf <-6)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 8-10</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend810 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend810 + "</td>";
+                if (zdf>=-10 &&zdf <-8)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+                temphtml += "<tr>";
+                temphtml += "<td>下跌 10+</td>";
+                temphtml += "<td>" + jsonObj.resultMapOwn.descend10 + "</td>";
+                temphtml += "<td>" + jsonObj.resultMapAll.descend10 + "</td>";
+                if (zdf <-10)
+                    temphtml += "<td>" + jsonObj.zdf + "</td>";
+                temphtml += "<tr>";
+
 
                 $("#tbody").html(temphtml)
             },
@@ -144,6 +203,10 @@
             }
         })
 
+    }
+
+    function  search() {
+        window.location.replace("/stock/toStockIncreaseEffect?stockCode="+$("#stockCode").val())
     }
 
 
